--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,7 +8,9 @@
   font-weight: normal;
 }
 
-body {
+body,
+button,
+::placeholder {
   font-family: 'Poppins', sans-serif;
   color: rgb(100, 99, 99);
 }
